# ThreadSense

./: .gitignore  README.md  pyproject.toml  threadsense.toml
docs/: artifacts.md  batch-api-runtime.md  local-runtime-contract.md  output-modes.md  overview.md  pitch.md  research-reddit.md  system-design.md  usage.md
scripts/: validate.sh
src/threadsense/: __init__.py  __main__.py  action_signals.py  api_server.py  batching.py  cli.py  cli_display.py  config.py  errors.py  logging_config.py  observability.py  preflight.py  schema_utils.py  workflows.py
src/threadsense/connectors/: __init__.py  cache.py  github_discussions.py  github_gist.py  hackernews.py  reddit.py  registry.py
src/threadsense/contracts/: __init__.py  analysis_contract.py  defaults.py
tests/fixtures/: README.md
tests/golden/: README.md  manifest.json
tests/integration/: test_batch_api.py  test_bootstrap.py  test_canonical_persistence.py  test_full_pipeline.py  test_local_inference.py  test_preflight.py  test_reddit_fetch.py  test_reddit_research.py  test_reporting.py
tests/property/: test_schema_properties.py
tests/regression/: test_analysis_replay.py
tests/unit/: test_alignment.py  test_analysis_pipeline.py  test_api_server.py  test_artifact_versioning.py  test_batching.py  test_canonical_models.py  test_cli.py  test_cli_display.py  test_config.py  test_corpus_analysis.py  test_corpus_index.py  test_corpus_model.py  test_domain_detect.py  test_errors.py  test_fetch_cache.py  test_github_discussions_connector.py  test_github_gist_connector.py  test_golden_evaluation.py  test_hackernews_connector.py  test_inference_quality.py  test_inference_router.py  test_local_runtime.py  test_minhash.py  test_normalize_pipeline.py  test_observability.py  test_reddit_connector.py  test_replay.py  test_report_rendering.py  test_source_registry.py  test_strategy_comparison.py  test_tree.py
(+57 files in other folders)
