[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "threadsense"
version = "0.1.0a0"
description = "Evidence-first discussion intelligence tooling."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
]

[project.scripts]
threadsense = "threadsense.cli:main"

[tool.uv]
dev-dependencies = [
  "hypothesis>=6.151.10",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "live_reddit: opt-in smoke test for the live Reddit endpoint",
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["threadsense"]
exclude = ["tests/fixtures/"]
